syntax = "proto3";

package syncspirit.proto;

message Announce {
    bytes           id          = 1;
    repeated string addresses   = 2;
    int64           instance_id = 3;
}
